# fibonacci_api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  init.py  lib.py  project-fibonacci.code-workspace  pyproject.toml  tasks.py  tests.py
containers/postgresql/: Dockerfile
extensions/: celery.py
fibonacci/: models.py  views.py
sql/: 000.sql  001.sql
